# standalones

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.devcontainer/: devcontainer.json
docker/: Dockerfile  buildContainer.sh  buildImage.sh  enterContainer.sh
src/: CMakeLists.txt
src/standalones/: CMakeLists.txt
src/standalones/advent_of_code/: CMakeLists.txt  Day12b.cpp
src/standalones/basics/: CMakeLists.txt  LoopDemo.cpp  ValueCategoriesDemo.cpp
src/tools/: CMakeLists.txt
src/tools/version_describer/: CMakeLists.txt  PrintCppStandard.cpp
